# smartix_provider

./: main.py  pyproject.toml
smartix_provider/hooks/: smartix_hook.py
smartix_provider/models/: base.py  common.py  delivery.py  monitoring.py  postamats.py  reports.py  settings.py
smartix_provider/operators/: smartix_operator.py
tests/: conftest.py  test_conn.py
